# brainwash

./: .env  .gitignore  AGENTS.md  CONTRIBUTING.md  Instructions.txt  Nonsense.txt  README.md  brainwash.code-workspace  brainwash.py  brainwash.yaml  bw_cfg.yaml  bwfileselect.py  debug_addrow.py  debug_no_blobs.py  debug_plot.py  debug_ppr_vis.py  debug_vis.py  debug_vis2.py  debug_vis3.py  debug_ylim.py  fix_labels_indent.py  fix_local_imports.py  fix_warnings_import.py  fix_warnings_import_ui.py  get_addrow.py  get_addrow2.py  get_addrow3.py  get_addrow4.py  get_copy.py  get_dfoutput.py  get_dft_loop.py  get_event_drag.py  get_event_drag2.py  get_event_drag3.py  get_event_drag4.py  get_event_drag5.py  get_lines.py  get_norm.py  get_normal_lines.py  get_plot_defs.py  (+75 more)
.devcontainer/: Dockerfile  _disabled_podman_build_docker.sh  devcontainer.json  podman_build_docker.sh
.grok/: config.toml
.zed/: settings.json
QtDesigner/: brainwash.ui  brainwash_ui.py  bwfileselect.py  bwfileselect.ui  bwmain.py  bwmain.ui  bwmeasure.py  bwmeasure.ui
dataGenerated/: Lactate_2022_abf_02GKO_metadata.txt  Lactate_2022_abf_03WT_metadata.txt  Lactate_2022_abf_04GKO_metadata.txt  Lactate_2022_abf_05WT_metadata.txt  Lactate_2022_abf_07WT_metadata.txt  Lactate_2022_abf_08GKO_metadata.txt  Lactate_2022_abf_10GKO_metadata.txt  Lactate_2022_abf_11WT_metadata.txt
data_source/: manifest.json
docs/: audit_parse_3_1.md  build.md  improvement_plan.md  method.md  plan_import_export.md  plan_v0.14_PP.md  plan_v0.14_Stim_SEM.md  plan_v0.15_group_sample_sweep.md  plan_v0.15_interactive_refactor.md  plan_v0.16_scitest.md  plan_v0.16_scitest_ANOVA.md  plan_v0.16_scitest_appImage.md  plan_v0.16_scitest_figtext.md  plan_xaxis_output_refactor.md
lib/: brainwash.ui  brainwash_ui.py  parse.py  ui.py
notebook/: Refactoring.md  analysis_dev.py  load_atf_files.md  load_atf_files.py  load_ibw_files.py  peakfitting.py  refactoring.py  ui_experiment.md  ui_experiment.py
quiwip/: JustATree.ui  UI_test.py  (+2 more)
(+410 files in other folders)
