[tool.black]
line-length = 150

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100

[project]
name = "brainwash"
version = "0.9.1"
description = "A visualization tool with convenience functions for electrophysiological recordings."

