[tool.black]
line-length = 150

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100

[project]
name = "brainwash"
version = "0.10.0"
description = "A data visualization tool for electrophysiological recordings, with convenience functions."
requires-python = ">=3.12"
dependencies = [
    "cx-freeze==8.5",
]

[dependency-groups]
dev = [
    "pyqt5-stubs>=5.15.6.0",
]
