[tool.uv]
constraint-dependencies = ["pyqt5-qt5==5.15.2"]

[tool.pytest.ini_options]
testpaths = ["src/lib"]

[tool.black]
line-length = 150

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100

[project]
name = "brainwash"
version = "0.10.0"
description = "A data visualization tool for electrophysiological recordings, with convenience functions."
requires-python = ">=3.12"
dependencies = [
    "pyqt5==5.15.11",
    "pandas",
    "numpy",
    "scipy",
    "scipy-openblas64",
    "scikit-learn==1.7.1",
    "matplotlib",
    "seaborn",
    "joblib",
    "tqdm",
    "pyyaml",
    "toml",
    "requests",
    "pyabf",
    "igor2",
    "pyarrow",
]

[dependency-groups]
dev = [
    "pyqt5-stubs>=5.15.6.0",
    "jupyterlab",
    "jupytext",
    "flake8",
    "flake8-black",
    "black",
    "isort",
    "pytest",
]
build = [
    "cx-freeze==8.5",
]
